<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!--  Menu item for edit -->
    <item
        android:id="@+id/action_edit"
        android:title="@string/edit"
        android:showAsAction="never" />
    
    <!--  Menu item for delete -->
    <item 
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:showAsAction="never" />
<!--     
     Menu item for "mark as complete" for goals
    <item
        android:id="@+id/action_complete"
        android:title="@string/complete_actionbar"
        android:showAsAction="never" /> -->
    
    <!--  Menu item for "remove" for habits -->
    <item
        android:id="@+id/action_archive"
        android:title="@string/archive_actionbar"
        android:showAsAction="never" />

</menu>
