<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
	android:layout_marginLeft="20dip"
	android:layout_marginRight="20dip">

    <View
        android:id="@+id/blank_box"
        android:layout_width="match_parent"
        android:layout_height="42dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="0" />

    <View
        android:id="@+id/dialog_border"
        android:layout_alignTop="@id/blank_box"
        android:layout_height="84dip"
        android:layout_width="84dip"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border"/>
        

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/blank_box"
        android:background="#ECECEC" >

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_marginTop="50dip"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/dialog_title"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/dialog_add_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_message"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:hint="@string/dialog_note_hint"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/dialog_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_add_note"
            android:layout_marginTop="10dip"
            android:orientation="vertical" >

            <Button
                android:id="@+id/dialog_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1px"
                android:background="#33B679"
                android:paddingBottom="7dip"
                android:paddingTop="7dip"
                android:text="@string/mark_as_complete"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/dialog_more_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/dialog_cancel"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1px"
                    android:layout_weight="1"
                    android:background="#455665"
                    android:paddingBottom="7dip"
                    android:paddingTop="7dip"
                    android:text="@string/dialog_back"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/dialog_delay"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#A4A4A4"
                    android:paddingBottom="7dip"
                    android:paddingTop="7dip"
                    android:text="@string/delay"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_habit_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_add_note"            
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/dialog_habit_done"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="1px"
                android:layout_weight="1"
                android:background="#04B404"
                android:paddingBottom="7dip"
                android:paddingTop="7dip"
                android:text="@string/dialog_done"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/dialog_habit_skip"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#A4A4A4"
                android:paddingBottom="7dip"
                android:paddingTop="7dip"
                android:text="@string/skip"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>
    
            
    <ImageView
        android:id="@+id/dialog_icon"
        android:layout_width="80dip"
        android:layout_height="90dip"
        android:layout_alignTop="@id/blank_box"
        android:layout_marginTop="2dip"
        android:layout_centerHorizontal="true"
        android:scaleType="centerInside" />

</RelativeLayout>